main.tf

data "aws_ami" "ubuntu" {
  most_recent = true
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }
  owners = ["099720109477"] # Canonical

}



resource "aws_vpc" "main_vpc" {
    cidr_block= var.vpc_cidr
    
    tags = {
        Name = "Main VPC"
    }
}


#################


resource "aws_internet_gateway" "main_igw" {
    vpc_id = aws_vpc.main_vpc.id

    tags = {
        Name = "Main IGW"
    }
}



#################


resource "aws_subnet" "public_subnet" {
    vpc_id = aws_vpc.main_vpc.id
    cidr_block = "10.0.1.0/24"

    map_public_ip_on_launch = var.public_state

    tags = {
        Name = "Public-Subnet-01"
    }
}


#################


resource "aws_security_group" "main_sg" {
    vpc_id = aws_vpc.main_vpc.id
    
    name = "Allow-SSH-HTTP"
    description = "Allow SSH and HTTP traffic"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }


    tags = {
        Name = "Main-SG-01"
    }
}




resource "aws_instance" "my_server" {
 ami = data.aws_ami.ubuntu.id
 instance_type = "t3.micro"
 subnet_id = aws_subnet.public_subnet.id
 vpc_security_group_ids = [aws_security_group.main_sg.id]

 lifecycle {
    ignore_changes = [ami]
 }
}






resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.main_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main_igw.id
    }

    tags = {
        Name = "Public-RT"
    }
}



resource "aws_route_table_association" "public_assoc" {
    subnet_id = aws_subnet.public_subnet.id
    route_table_id = aws_route_table.public_rt.id
}
